# vibe_test

./: .gitignore  bot.py  main.py  pyproject.toml  requirements.txt
.claude/: launch.json
handlers/: schedule_handler.py  text_handler.py  voice_handler.py
services/: ai_formatter.py  calendar_service.py  platform_formatter.py  voice_service.py
tests/: test_ai_formatter.py  test_platform_formatter.py
